--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
-            <optional>true</optional>
+<!--             <optional>true</optional> -->
+                 <!--             <optional>true</optional> -->
+                 <!--             <optional>true</optional> -->
+                 <!--             <optional>true</optional> -->
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
