--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
                  <!--             <optional>true</optional> -->
                  <!--             <optional>true</optional> -->
                  <!--             <optional>true</optional> -->
+                                  <!--             <optional>true</optional> -->
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
